--- a/adventofcode2017.cabal
+++ b/adventofcode2017.cabal
@@ -17,6 +17,7 @@ library
   hs-source-dirs:      src
   exposed-modules:     Day1
   build-depends:       base >= 4.7 && < 5
+                     , criterion
   default-language:    Haskell2010
 
 source-repository head
