--- a/adventofcode2017.cabal
+++ b/adventofcode2017.cabal
@@ -11,11 +11,12 @@ copyright:           2017 Julian Jelfs
 category:            Web
 build-type:          Simple
 extra-source-files:  README.md
+                   , data/day2.txt
 cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Day1
+  exposed-modules:     Day1, Day2
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
