--- a/adventofcode2017.cabal
+++ b/adventofcode2017.cabal
@@ -16,7 +16,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Day1, Day2, Day3, Day4
+  exposed-modules:     Day1, Day2, Day3, Day4, Day5
   build-depends:       base >= 4.7 && < 5
                      , criterion
                      , containers
