--- a/adventofcode2017.cabal
+++ b/adventofcode2017.cabal
@@ -20,6 +20,7 @@ library
   build-depends:       base >= 4.7 && < 5
                      , criterion
                      , containers
+                     , vector
   default-language:    Haskell2010
 
 source-repository head
