--- a/adventofcode2017.cabal
+++ b/adventofcode2017.cabal
@@ -27,6 +27,7 @@ executable adventofcode
                      , vector
                      , regex-pcre-builtin
                      , split
+                     , parsec
   default-language:    Haskell2010
 
 source-repository head
