--- a/adventofcode2017.cabal
+++ b/adventofcode2017.cabal
@@ -19,7 +19,7 @@ cabal-version:       >=1.10
 
 executable adventofcode
   hs-source-dirs:      src
-  other-modules:     Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8, Day9, Day10, Day11, Day12, Day13, Day14, Common
+  other-modules:     Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8, Day9, Day10, Day11, Day12, Day13, Day14, Day15, Common
   main-is:           Main.hs
   build-depends:       base >= 4.7 && < 5
                      , criterion
