--- a/adventofcode2017.cabal
+++ b/adventofcode2017.cabal
@@ -19,7 +19,23 @@ cabal-version:       >=1.10
 
 executable adventofcode
   hs-source-dirs:      src
-  other-modules:     Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8, Day9, Day10, Day11, Day12, Day13, Day14, Day15, Common
+  other-modules:     Day1
+                   , Day2
+                   , Day3
+                   , Day4
+                   , Day5
+                   , Day6
+                   , Day7
+                   , Day8
+                   , Day9
+                   , Day10
+                   , Day11
+                   , Day12
+                   , Day13
+                   , Day14
+                   , Day15
+                   , Day16
+                   , Common
   main-is:           Main.hs
   build-depends:       base >= 4.7 && < 5
                      , criterion
@@ -29,6 +45,8 @@ executable adventofcode
                      , split
                      , parsec
                      , hex
+                     , transformers
+                     , either
   default-language:    Haskell2010
 
 source-repository head
