--- a/adventofcode2017.cabal
+++ b/adventofcode2017.cabal
@@ -38,6 +38,8 @@ executable adventofcode
                    , Day17
                    , Day18
                    , Day19
+                   , Day20
+                   , Day21
                    , Common
   main-is:           Main.hs
   build-depends:       base >= 4.7 && < 5
@@ -50,6 +52,7 @@ executable adventofcode
                      , hex
                      , transformers
                      , either
+                     , matrix
   default-language:    Haskell2010
 
 source-repository head
