--- a/adventofcode2017.cabal
+++ b/adventofcode2017.cabal
@@ -42,6 +42,7 @@ executable adventofcode
                    , Day21
                    , Day22
                    , Day23
+                   , Day24
                    , Common
   main-is:           Main.hs
   build-depends:       base >= 4.7 && < 5
